CTOO-289 (internal): Extract runner from compiler (#181)
https://treasure-data.atlassian.net/browse/CTOO-289