@@ -106,13 +106,41 @@ lazy val lang = project
         "org.wvlet.airframe" %% "airframe"          % AIRFRAME_VERSION,
         "org.wvlet.airframe" %% "airframe-launcher" % AIRFRAME_VERSION,
         "org.wvlet.airframe" %% "airframe-ulid"     % AIRFRAME_VERSION,
-        // Add a reference implementation of the compiler
-        "org.scala-lang" %% "scala3-compiler" % SCALA_3 % Test,
-        // Add sql parser for testing purpose
+        // Add airframe's sql parser for testing purpose
         "org.wvlet.airframe" %% "airframe-sql" % AIRFRAME_VERSION % Test,
-        "org.apache.arrow"    % "arrow-vector" % "16.1.0",
-        "org.duckdb"          % "duckdb_jdbc"  % "1.0.0",
-        "io.trino"            % "trino-jdbc"   % TRINO_VERSION,
+        // Add a reference implementation of the compiler
+        "org.scala-lang" %% "scala3-compiler" % SCALA_3 % Test
+      ),
+    // To enable JVM options
+    Test / fork := true,
+    // When forking, the base directory should be set to the root directory
+    Test / baseDirectory :=
+      (ThisBuild / baseDirectory).value,
+    // Watch changes of example .flow files upon testing
+    Test / watchSources ++=
+      ((ThisBuild / baseDirectory).value / "spec" ** "*.flow").get ++
+        ((ThisBuild / baseDirectory).value / "flow-lang" ** "*.flow").get
+  )
+  .dependsOn(api.jvm)
+
+lazy val runner = project
+  .in(file("flow-runner"))
+  .settings(
+    buildSettings,
+    name        := "flow-runner",
+    description := "flow program executor using trino, duckdb, etc.",
+    Test / javaOptions ++=
+      Seq(
+        // "--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED",
+        // Add JVM options for suppress warnings in TestTrinoServer
+        "-Djdk.attach.allowAttachSelf=true",
+        "-XX:+EnableDynamicAgentLoading"
+      ),
+    libraryDependencies ++=
+      Seq(
+        "org.apache.arrow" % "arrow-vector" % "16.1.0",
+        "org.duckdb"       % "duckdb_jdbc"  % "1.0.0",
+        "io.trino"         % "trino-jdbc"   % TRINO_VERSION,
         // exclude() and jar() are necessary to avoid https://github.com/sbt/sbt/issues/7407
         // tpc-h connector neesd to download GB's of jar, so excluding it
         "io.trino" % "trino-testing" % TRINO_VERSION % Test exclude ("io.trino", "trino-tpch"),
@@ -126,11 +154,11 @@ lazy val lang = project
         "io.trino" % "trino-hdfs" % TRINO_VERSION % Test jar (),
         "io.trino" % "trino-memory" % TRINO_VERSION % Test exclude ("io.trino", "trino-tpch") jar ()
 
-//        // Add Spark as a reference impl (Scala 2)
-//        "org.apache.spark" %% "spark-sql" % "3.5.1" % Test excludeAll (
-//          // exclude sbt-parser-combinators as it conflicts with Scala 3
-//          ExclusionRule(organization = "org.scala-lang.modules", name = "scala-parser-combinators_2.13")
-//        ) cross (CrossVersion.for3Use2_13)
+        //        // Add Spark as a reference impl (Scala 2)
+        //        "org.apache.spark" %% "spark-sql" % "3.5.1" % Test excludeAll (
+        //          // exclude sbt-parser-combinators as it conflicts with Scala 3
+        //          ExclusionRule(organization = "org.scala-lang.modules", name = "scala-parser-combinators_2.13")
+        //        ) cross (CrossVersion.for3Use2_13)
       ),
     // To enable JVM options
     Test / fork := true,
@@ -139,9 +167,10 @@ lazy val lang = project
       (ThisBuild / baseDirectory).value,
     // Watch changes of example .flow files upon testing
     Test / watchSources ++=
-      ((ThisBuild / baseDirectory).value / "examples" ** "*.flow").get
+      ((ThisBuild / baseDirectory).value / "spec" ** "*.flow").get ++
+        ((ThisBuild / baseDirectory).value / "flow-lang" ** "*.flow").get
   )
-  .dependsOn(api.jvm)
+  .dependsOn(lang)
 
 lazy val server = project
   .in(file("flow-server"))
